--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm David Agudo!</h1>
-				<p>I'm a student at <em>Academy For Software Engineeringl</em><a href="/about">Read more about my life...</a></p>
+				<p>I'm a student at <em>Academy For Software Engineering</em><a href="/about">  Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:davida9441@afsenyc.org">email</a></li>
+        		<li><a href="https://github.com/davida9441">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
