--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: David Agudo
 ---
 <div class="blurb">
 	<h1>DAVIDS LEARNING BLOG </h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>i a student at <em>AFSE/em> <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
